fix: overflow scroll bar

--- a/app/about-us/aboutus.css
+++ b/app/about-us/aboutus.css
@@ -21,7 +21,7 @@
 }
 
 .aboutus-wrapper {
-  width: 95vw;
+  width: 100%;
   max-width: 1440px;
   margin: 0 auto;
   display: flex;
